feat:파일 업로드

--- a/web/index.html
+++ b/web/index.html
@@ -77,6 +77,7 @@
     <div class="container">
         <div id="elemLIST">
             <button id="uploadButton">Upload</button>
+            <input type="file" id="videoUploadInput" accept="video/*" style="display: none;">
             <h2>Available Videos</h2>
             <ul id="videoList"></ul>
         </div>
